Code inspection in IDE to update code calls, remove more warnings, and cleanup the code to use newer JVM 25 features (we had some JVM 5 patterns)